# to-digi-rs

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.toml
.github/workflows/: publish-container.yml
deploy/: README.md  compose.yaml  config.example.toml  import.sh  run.sh
docs/: digiweb-verification-api.md
scripts/: package-deploy.sh  test-deploy.sh
src/: cli.rs  config.rs  error.rs  logging.rs  main.rs
src/analysis/: collector.rs  console_report.rs  json_report.rs  mod.rs  model.rs  text_report.rs
src/digiweb/: auth.rs  client.rs  mod.rs  payload.rs  preflight.rs  status.rs
src/import/: result.rs  runner.rs
src/models/: ingredient.rs  mod.rs  nutrition.rs  plu.rs
src/recovery/: lock.rs  mod.rs  model.rs  planner.rs  store.rs  validator.rs
src/source/: mapping.rs  mdb_tools.rs  mod.rs  schema.rs
src/validation/: issue.rs  mod.rs  validator.rs
src/verification/: mod.rs  report.rs
