[package]
name = "to-digi-rs"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "1.36", features = ["serde-with-float", "serde-with-str"] }
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
toml = "0.8"
zeroize = "1.8"

[dev-dependencies]
tempfile = "3.14"
